# movable_graph

./: 4.2.0  README.md  dev.ipynb  df.csv  exported_data.csv  field.py  panel_field.py  pyproject.toml  simplest_concept.py  working_concept.py
data/: dashboard_input.csv  panel_input_output.csv
executables/: dev.ipynb  line.py  panel_input.py
movable_graph/: __init__.py
